# ceda-directory-tree

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint_python.yml  test.yml
ceda_directory_tree/: __init__.py  dataset_node.py  directory_node.py
ceda_directory_tree/examples/: __init__.py  speed_test.py
directory_tree/: dataset_node.py  dataset_tree.py  directory_node.py  directory_tree.py
directory_tree/examples/: __init__.py  speed_test.py
docs/: Makefile  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/api/: node.html  node.rst
docs/source/: conf.py
docs_public/: objects.inv
docsrc/source/api/: node.rst
tests/: __init__.py  test_dataset_node.py
