[tool.poetry]
name = "directory-tree"
version = "1.1.4"
description = "Python package to create a virtual tree data structure to represent a directory tree to be used for efficient search"
authors = ["Tommy Godfrey, Daniel Westwood <daniel.westwood@stfc.ac.uk>"]
license = "{file='LICENSE'}"
readme = "README.md"

[project.urls]
Repository = "https://github.com/cedadev/ceda-directory-tree"

classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Plugins',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3'
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.3"
requests = "^2.32.3"
anytree = "^2.12.1"
tox = "^4.23.2"
sphinx = "^7"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
directory-tree-speed-test = "directory_tree.examples.speed_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
