[project]
name = "ceda-directory-tree"
version = "1.2.0"
description = "Python package to create a virtual tree data structure to represent a directory tree to be used for efficient search"
authors = [
    {name = "Daniel Westwood", email = "daniel.westwood@stfc.ac.uk"},
    {name = "William Tucker", email = "william.tucker@stfc.ac.uk"},
    {name = "Neil Massey", email = "neil.massey@stfc.ac.uk"},
    {name = "Tommy Godfrey", email = "daniel.westwood@stfc.ac.uk"}
]
license = "BSD 3"
readme = "README.md"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "anytree (>=2.12.1,<3.0.0)",
    "tox (>=4.24.1,<5.0.0)",
]
requires-python = ">=3.9,<4"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7"
poetry = "^2"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^3.0.2"

[project.urls]
Repository = "https://github.com/cedadev/ceda-directory-tree"

[project.scripts]
directory-tree-speed-test = "directory_tree.examples.speed_test:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
